# hch

./: .gitignore  README.md
6MWT/: README.md  settings.gradle.kts
Co-Pilot/: .gitignore  LLM_German.ipynb  LLMs.ipynb  RAG_LLM.ipynb  README.md  app.py  bedinnungsanleitung.txt  requirements.txt  sound_test.ipynb  test_aws_ses.py
Co-Pilot/tts/: __init__.py  pyproject.toml  tts.py
HackAndHeal/: Hack_and_Heal_Final.ipynb
OpDocAI/: .gitignore  .lintstagedrc.cjs  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  filtered_filtered_transcription-job-e9dba455-6428-4796-9c9c-b7f93d83b09d.json  filtered_transcription-job-0844ae8d-7ffd-43f7-8a1b-76ef38c5894f.json  filtered_transcription-job-43fa85df-b813-4e8c-87a7-bddc6cfc76e3.json  filtered_transcription-job-4e50bab5-7d5b-492e-92bd-c490edc1360a.json  filtered_transcription-job-533086ac-1f08-4cd4-a684-fc5b2436350f.json  filtered_transcription-job-561eb007-f3cc-46f4-b63e-8a859d8a2ec7.json  filtered_transcription-job-6eb88478-050d-4626-ad24-446925e93e6b.json  filtered_transcription-job-7bd68464-8449-4815-b9a7-67d1bacc5bc0.json  filtered_transcription-job-8fa20f01-ae98-4402-a348-b6e2d1cc0d3b.json  filtered_transcription-job-b0e85327-1d9f-4588-bbf6-a12cb3ca5510.json  filtered_transcription-job-b34133de-2dbd-4db9-b517-94bd1db6fa85.json  filtered_transcription-job-cacf3105-1186-48d0-80f0-00badf6282cb.json  filtered_transcription-job-df62adb0-f95c-4efb-8f67-1ef8a0ed188d.json  jest.conf.js  package-lock.json  package.json  pom.xml  proxy.conf.json  tsconfig.json
TRIAS MedRag/: .gitignore  README.md
(+323 files in other folders)
